syntax = "proto3";

package proto.v1;

option go_package = "./proto/v1/chat";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  rpc ListMessagesByRide(ListMessagesByRideRequest) returns (ListMessagesByRideResponse) {}
  rpc ListMessagesBySender(ListMessagesBySenderRequest) returns (ListMessagesBySenderResponse) {}
  rpc ListChatsForUser(ListChatsForUserRequest) returns (ListChatsForUserResponse) {}
}

message ChatMessage {
  string id = 1;
  string ride_id = 2;
  string sender_id = 3;
  string content = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message SendMessageRequest {
  string ride_id = 1;
  string content = 2;
}
message SendMessageResponse {
  ChatMessage message = 1;
}

message ListMessagesByRideRequest {
  string ride_id = 1;
  int32 limit = 2;
  google.protobuf.Timestamp before = 3;
}
message ListMessagesByRideResponse {
  repeated ChatMessage messages = 1;
}

message ListMessagesBySenderRequest {
  string sender_id = 1;
  int32 limit = 2;
  google.protobuf.Timestamp before = 3;
}
message ListMessagesBySenderResponse {
  repeated ChatMessage messages = 1;
}

message ListChatsForUserRequest {
  string user_id = 1;
  int32 limit = 2;
  google.protobuf.Timestamp before = 3;
}
message ListChatsForUserResponse {
  repeated ChatMessage messages = 1;
}
